Updated HTML and Javascript with neon sign

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,45 +3,102 @@
 }
 
 body {
-    font-family: 'Special Elite', cursive;
-    background-color: #000500;
-}
-.container,
-.main-section,
-.jumbotron {
-    background-color: #000500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    font-family: 'Quicksand', sans-serif;
+    background: #000;
+    overflow: hidden;
+
 }
 
-
-.psychic-header {
-    font-family: 'Special Elite', cursive;
-    padding-bottom: 40px;
-    font-size: 50px;
+:root {
+    font-size: 10px;
+    --neon-text-color: purple;
+    --neon-border-color: #08f;
     text-align: center;
-}
-
-.palm-image {
-    float: left;
-    width: 200px;
-    height: auto;
-    margin-top: 10px;
-    margin-right: 25px;
 
 }
 
-h2, 
-.score-board {
+h1, .neon-sign {
+    position: absolute;
+    top: 25%;
+    left: 50%;
+
+    padding: 4rem 8rem 5.5rem;
+
+    font-size: 5rem;
+    font-weight: 200;
+    font-style: italic;
+    text-transform: uppercase;
+
+    border: 0.4rem solid #fff;
+    border-radius: 2rem;
+
+    color: #fff;
+
+    transform: translate(-50%,-85%);
+    animation: neon 1.5s infinite alternate;
+}
+.neon-sign,
+.score-board-list {
+    font-family: 'Quicksand', sans-serif;
+
+}
+
+ h1::selection  {
+    color: var(--neon-text-color);
+    background-color: var(--neon-border-color);
+}
+
+h1:focus {
+    outline: none;
+}
+
+/* @keyframs means that the animation is created by gradually changing 
+from one set of CSS styles to another.*/
+
+
+@keyframes neon {
+    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100%
+    {
+        text-shadow: 
+        -0.2rem -0.2rem 1rem #fff,
+        0.2rem 0.2rem 1rem #fff,
+        0 0 2rem var(--neon-text-color),
+        0 0 4rem var(--neon-text-color),
+        0 0 6rem var(--neon-text-color),
+        0 0 8rem var(--neon-text-color),
+        0 0 10rem var(--neon-text-color);
+
+        box-shadow:
+        0 0 .5rem #fff,
+        inset 0 0 .5rem #fff,
+        0 0 8rem var(--neon-border-color),
+        inset 0 0 2rem var(--neon-border-color),
+        0 0 4rem var(--neon-border-color),
+        inset 0 0 4rem var(--neon-border-color);
+    }
+    20%, 24%, 55%
+    {
+        text-shadow: none;
+        box-shadow: none;
+    }
+}
+
+.score-board-list,
+.position-guess {
+    font-size: 30px;
     color: white;
-    font-size: 20px;
-    float: right;
+    padding-top: 10px;
+    font-family: 'Kosugi', sans-serif;
+    text-align: left;
 
-#blink {
-    text-align: center;
+    
 }
 
 
-
-  
 @media screen and (max-width: 980px) {
 
 
@@ -53,5 +110,5 @@ h2,
 
 @media screen and (max-width: 640px) {
 
-
 }
+
